<resources>
    <string name="app_name">MobileTv</string>
    <string name="error">Erro</string>
    <string name="loading">Carregando</string>
    <string name="title">Título</string>
    <string name="sign_in">Entrar</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="enter_your_email">Digite seu e-mail</string>
    <string name="enter_your_password">Digite sua senha</string>
    <string name="description">Descrição</string>
    <string name="time">00:00</string>
    <string name="time_view">%02d:%02d:%02d</string>
    <string name="logoff">Sair</string>
    <string name="do_you_really_want_to_end_your_session">Deseja realmente encerrar a sessão?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="open_drawer" translatable="false">Abrir Menu</string>
    <string name="close_drawer" translatable="false">Fechar Menu</string>
    <string name="unknown">Desconhecido</string>
    <string name="hint_title">[ %1$d ] Título</string>
    <string name="hint_address">[ %1$d ] M3U8</string>
    <string name="home">Início</string>
    <string name="action">Ação</string>
    <string name="see_more">Ver Mais</string>
    <string name="to_add">Adicionar</string>
    <string name="to_remove">Remover</string>
    <string name="episode">Episódio %1$d</string>
    <string name="form">Formulário</string>
    <string name="todo">A fazer</string>
    <!-- Toasts -->
    <string name="error_upload_episode_image">Erro ao enviar imagem do episódio.</string>
    <string name="error_upload_cover_image">Erro ao enviar imagem de capa.</string>
    <string name="added_successfully">Adicionado com sucesso!</string>
    <string name="gallery_permission_denied">Permissão negada para acessar a galeria.</string>
    <string name="add_to_news">Adicionar às Notícias</string>
    <string name="admin_permissions_required">Você precisa de permissões de administrador.</string>
    <string name="configuration">Configuração</string>
    <string name="fill_required_fields">Por favor, preencha todos os campos obrigatórios.</string>
    <string name="insufficient_points">Pontos insuficientes</string>

    <string name="username">Nome de usuário</string>
    <string name="update">Atualizar</string>
    <string name="not_now">Agora não</string>
    <string name="zero">0</string>
    <string name="series">Séries</string>
    <string name="earn_points">Ganhar Pontos</string>
    <string name="wait_a_moment">Aguarde um momento</string>

    <string name="new_update">Nova atualização</string>
    <string name="the_application_has_a_new_version">O aplicativo tem uma nova versão</string>
    <string name="download">Baixar</string>
    <string name="cancel">Cancelar</string>
    <string name="last_installed_version">Última versão instalada</string>
    <string name="downloading">Baixando: %1$d%</string>
    <string name="checking_the_version">Verificando a versão</string>


    <string name="confirmation_debit_message">Após a confirmação, serão debitados 10 pontos da sua conta para que você possa ter acesso ao conteúdo.</string>
    <string name="administrative">Administrativo</string>
    <string name="only_when_playing_the_video">Somente ao reproduzir o vídeo</string>
    <string name="sign_up">Inscrever-se</string>
    <string name="sign_out">Finalizar sessão</string>
    <string name="would_you_like_to_end_your_session_now">Gostaria de encerrar sua sessão agora?</string>
    <string name="javabot">Javabot</string>
    <string name="enter_your_message">Digite sua mensagem</string>
    <string name="send">Enviar</string>

    <string name="delete_conversation">Excluir Conversa</string>
    <string name="delete_conversation_message">Tem certeza de que deseja excluir a conversa?</string>
    <string name="delete_yes">Excluir</string>
    <string name="delete_not">Cancelar</string>
    <string name="history">Histórico</string>
    <string name="sorry_did_not_understand">Desculpe, não posso responder a essa pergunta ainda.</string>


    <string name="message_history">Histórico de Mensagens</string>
    <string name="history_deleted_successfully">Histórico excluído com sucesso</string>
    <string name="history_could_not_be_deleted">O histórico não pôde ser excluído</string>
    <string name="history_file_does_not_exist">O arquivo de histórico não existe</string>
    <string name="share_file">Compartilhar arquivo</string>
    <string name="no_share_apps_available">Nenhum aplicativo de compartilhamento disponível</string>
    <string name="user_not_logged_in">Usuário não conectado.</string>
    <string name="balance">R$ 0,00</string>


</resources>
