<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_large">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.mobiletv.app.widget.MaterialEditText
            android:id="@+id/dialog_action_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:inputType="textCapSentences" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center|end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_action_dismiss"
                style="@style/MaterialButtonOutlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_now" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_action_update"
                style="@style/MaterialButtonOutlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>