<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="?attr/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nav_header_name"
            style="@style/FontTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ellipsize="marquee"
            android:gravity="center|start"
            android:hint="@string/loading"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="@dimen/padding_small"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <com.mobiletv.app.widget.Badge
            android:id="@+id/nav_header_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_small"
            app:badge_text="@string/zero" />

        <com.mobiletv.app.widget.Badge
            android:id="@+id/nav_header_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_small"
            app:badge_text="@string/balance" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>