<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:gravity="center"
            android:orientation="horizontal">

            <com.mobiletv.app.widget.Cover
                android:id="@+id/action_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_placeholder_cards" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small">

                <com.mobiletv.app.widget.MaterialEditText
                    android:id="@+id/action_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/title"
                    app:inputType="textCapSentences"
                    app:placeholderText="@string/title" />

                <com.mobiletv.app.widget.MaterialEditText
                    android:id="@+id/action_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/description"
                    app:inputType="textMultiLine"
                    app:isDescription="true"
                    app:placeholderText="@string/description" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.mobiletv.app.widget.MaterialBox
            android:id="@+id/action_carousel"
            style="@style/MaterialBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:button="@drawable/ic_material_box_state"
            android:paddingStart="@dimen/padding_small"
            android:text="@string/add_to_news" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_large"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/container_episodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center|end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_episode_rem"
                style="@style/MaterialButtonOutlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/to_remove" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_episode_add"
                style="@style/MaterialButtonOutlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_add" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:contentDescription="@string/todo"
        android:src="@drawable/icon_save"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
