<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_purple">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:placeholderText="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                style="@style/ThemeTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ThemeTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:placeholderText="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                style="@style/ThemeTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_in"
            style="@style/MaterialButtonOutlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginTop="8dp"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>